# pyramid

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: pyramid-matlab-test.yml  pyramid-pytest.yml
docs/core-demo/: README.md  delimiter.csv  demo_experiment.dot  demo_experiment.yaml  foo.csv
docs/open-ephys-zmq-demo/: README.md  delimiter.csv  demo_experiment.dot  demo_experiment.yaml
docs/phy-plexon-demo/: README.md  demo_experiment.yaml
docs/phy-plexon-demo/images/: demo_experiment.dot
docs/plexon-demo/: README.md  demo_experiment.yaml
docs/plexon-demo/config/: custom_enhancers.py  main-ecode-rules.csv  special-ecode-rules.csv
docs/plexon-demo/images/: demo_experiment.dot
docs/signal-demo/: README.md  delimiter.csv  demo_experiment.dot  demo_experiment.yaml  demo_experiment_with_sync.dot  demo_experiment_with_sync.yaml  signal.csv  signal_sync.csv
docs/smooth-demo/: README.md  demo_experiment.dot  demo_experiment.yaml  demo_signal.csv  demo_subject.yaml
matlab/: Hdf5TrialIterator.m  JsonTrialIterator.m  README.md  TrialFile.m  runTrialFileTests.m
matlab/test/: testHdf5TrialFile.m  testJsonTrialFile.m
matlab/test/fixture_files/: generate_fixture_files.sh  sampleTrials.m  sample_trials.hdf5  sample_trials.json
src/pyramid/: cli.py  context.py  file_finder.py
src/pyramid/model/: events.py  model.py  signals.py
src/pyramid/plotters/: plotters.py  standard_plotters.py
src/pyramid/trials/: standard_adjusters.py  standard_collecters.py  standard_enhancers.py  standard_enhancers_old.py  trial_file.py  trials.py
tests/pyramid/: test_cli.py  test_context.py  test_file_finder.py
tests/pyramid/fixture_files/: bar.csv  expected_trial_list.json  experiment.yaml  foo.csv  match_trial_signal.csv
tests/pyramid/model/: test_events.py  test_signals.py
(+38 files in other folders)
